src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_fbgemm_linear_fp16_weight(value input, value packed_weight, value bias);
value atg_fbgemm_linear_fp16_weight_fp32_activation(value input, value packed_weight, value bias);
value atg_fbgemm_linear_int8_weight(value input, value weight, value packed, value col_offsets, value weight_scale, value weight_zero_point, value bias);
value atg_fbgemm_linear_int8_weight_fp32_activation(value input, value weight, value packed, value col_offsets, value weight_scale, value weight_zero_point, value bias);
value atg_fbgemm_pack_gemm_matrix_fp16(value input);
value atg_fbgemm_pack_quantized_matrix(value input);
value atg_fbgemm_pack_quantized_matrix_kn(value input, int64_t K, int64_t n);
value atg_feature_alpha_dropout(value input, double p, int train);
value atg_feature_alpha_dropout_(value self, double p, int train);
value atg_feature_dropout(value input, double p, int train);
value atg_feature_dropout_(value self, double p, int train);
value atg_fft_fft(value self, value n, int64_t dim, value norm);
value atg_fft_fft2(value self, value s, value dim, value norm);
value atg_fft_fft2_out(value out, value self, value s, value dim, value norm);
value atg_fft_fft_out(value out, value self, value n, int64_t dim, value norm);
value atg_fft_fftfreq(int64_t n, double d, int options_kind, int options_device);
value atg_fft_fftfreq_out(value out, int64_t n, double d);
value atg_fft_fftn(value self, value s, value dim, value norm);
value atg_fft_fftn_out(value out, value self, value s, value dim, value norm);
value atg_fft_fftshift(value self, value dim);
value atg_fft_hfft(value self, value n, int64_t dim, value norm);
value atg_fft_hfft2(value self, value s, value dim, value norm);
value atg_fft_hfft2_out(value out, value self, value s, value dim, value norm);
value atg_fft_hfft_out(value out, value self, value n, int64_t dim, value norm);
value atg_fft_hfftn(value self, value s, value dim, value norm);
value atg_fft_hfftn_out(value out, value self, value s, value dim, value norm);
value atg_fft_ifft(value self, value n, int64_t dim, value norm);
value atg_fft_ifft2(value self, value s, value dim, value norm);
value atg_fft_ifft2_out(value out, value self, value s, value dim, value norm);
value atg_fft_ifft_out(value out, value self, value n, int64_t dim, value norm);
value atg_fft_ifftn(value self, value s, value dim, value norm);
value atg_fft_ifftn_out(value out, value self, value s, value dim, value norm);
value atg_fft_ifftshift(value self, value dim);
value atg_fft_ihfft(value self, value n, int64_t dim, value norm);
value atg_fft_ihfft2(value self, value s, value dim, value norm);
value atg_fft_ihfft2_out(value out, value self, value s, value dim, value norm);
value atg_fft_ihfft_out(value out, value self, value n, int64_t dim, value norm);
value atg_fft_ihfftn(value self, value s, value dim, value norm);
value atg_fft_ihfftn_out(value out, value self, value s, value dim, value norm);
value atg_fft_irfft(value self, value n, int64_t dim, value norm);
value atg_fft_irfft2(value self, value s, value dim, value norm);
value atg_fft_irfft2_out(value out, value self, value s, value dim, value norm);
value atg_fft_irfft_out(value out, value self, value n, int64_t dim, value norm);
value atg_fft_irfftn(value self, value s, value dim, value norm);
value atg_fft_irfftn_out(value out, value self, value s, value dim, value norm);
value atg_fft_rfft(value self, value n, int64_t dim, value norm);
value atg_fft_rfft2(value self, value s, value dim, value norm);
value atg_fft_rfft2_out(value out, value self, value s, value dim, value norm);
value atg_fft_rfft_out(value out, value self, value n, int64_t dim, value norm);
value atg_fft_rfftfreq(int64_t n, double d, int options_kind, int options_device);
value atg_fft_rfftfreq_out(value out, int64_t n, double d);
value atg_fft_rfftn(value self, value s, value dim, value norm);
value atg_fft_rfftn_out(value out, value self, value s, value dim, value norm);
value atg_fill(value self, value value_);
value atg_fill_(value self, value value_);
value atg_fill_diagonal_(value self, value fill_value, int wrap);
value atg_fill_scalar_out(value out, value self, value value_);
value atg_fill_tensor(value self, value value_);
value atg_fill_tensor_(value self, value value_);
value atg_fill_tensor_out(value out, value self, value value_);