src/bindings/torch_bindings_generated3.ml


  let stubs_fbgemm_linear_fp16_weight =
    foreign
      "atg_fbgemm_linear_fp16_weight"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_fbgemm_linear_fp16_weight_fp32_activation =
    foreign
      "atg_fbgemm_linear_fp16_weight_fp32_activation"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_fbgemm_linear_int8_weight =
    foreign
      "atg_fbgemm_linear_int8_weight"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_fbgemm_linear_int8_weight_fp32_activation =
    foreign
      "atg_fbgemm_linear_int8_weight_fp32_activation"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_fbgemm_pack_gemm_matrix_fp16 =
    foreign "atg_fbgemm_pack_gemm_matrix_fp16" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_fbgemm_pack_quantized_matrix =
    foreign "atg_fbgemm_pack_quantized_matrix" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_fbgemm_pack_quantized_matrix_kn =
    foreign
      "atg_fbgemm_pack_quantized_matrix_kn"
      (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_feature_alpha_dropout =
    foreign
      "atg_feature_alpha_dropout"
      (gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_feature_alpha_dropout_ =
    foreign
      "atg_feature_alpha_dropout_"
      (gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_feature_dropout =
    foreign "atg_feature_dropout" (gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_feature_dropout_ =
    foreign "atg_feature_dropout_" (gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_fft_fft =
    foreign
      "atg_fft_fft"
      (gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_fft2 =
    foreign
      "atg_fft_fft2"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_fft2_out =
    foreign
      "atg_fft_fft2_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_fft_out =
    foreign
      "atg_fft_fft_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_fftfreq =
    foreign "atg_fft_fftfreq" (int64_t @-> double @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_fft_fftfreq_out =
    foreign
      "atg_fft_fftfreq_out"
      (gc_tensor @-> int64_t @-> double @-> returning raw_tensor)
  ;;

  let stubs_fft_fftn =
    foreign
      "atg_fft_fftn"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_fftn_out =
    foreign
      "atg_fft_fftn_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_fftshift =
    foreign "atg_fft_fftshift" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;
end

module C1 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_fft_hfft =
    foreign
      "atg_fft_hfft"
      (gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_hfft2 =
    foreign
      "atg_fft_hfft2"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_hfft2_out =
    foreign
      "atg_fft_hfft2_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_hfft_out =
    foreign
      "atg_fft_hfft_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_hfftn =
    foreign
      "atg_fft_hfftn"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_hfftn_out =
    foreign
      "atg_fft_hfftn_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_ifft =
    foreign
      "atg_fft_ifft"
      (gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_ifft2 =
    foreign
      "atg_fft_ifft2"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_ifft2_out =
    foreign
      "atg_fft_ifft2_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_ifft_out =
    foreign
      "atg_fft_ifft_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_ifftn =
    foreign
      "atg_fft_ifftn"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_ifftn_out =
    foreign
      "atg_fft_ifftn_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_ifftshift =
    foreign
      "atg_fft_ifftshift"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_fft_ihfft =
    foreign
      "atg_fft_ihfft"
      (gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_ihfft2 =
    foreign
      "atg_fft_ihfft2"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_ihfft2_out =
    foreign
      "atg_fft_ihfft2_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_ihfft_out =
    foreign
      "atg_fft_ihfft_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_ihfftn =
    foreign
      "atg_fft_ihfftn"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_ihfftn_out =
    foreign
      "atg_fft_ihfftn_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_irfft =
    foreign
      "atg_fft_irfft"
      (gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_irfft2 =
    foreign
      "atg_fft_irfft2"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_irfft2_out =
    foreign
      "atg_fft_irfft2_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_irfft_out =
    foreign
      "atg_fft_irfft_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_irfftn =
    foreign
      "atg_fft_irfftn"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_irfftn_out =
    foreign
      "atg_fft_irfftn_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_rfft =
    foreign
      "atg_fft_rfft"
      (gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_rfft2 =
    foreign
      "atg_fft_rfft2"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_rfft2_out =
    foreign
      "atg_fft_rfft2_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_rfft_out =
    foreign
      "atg_fft_rfft_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int64_t
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_rfftfreq =
    foreign
      "atg_fft_rfftfreq"
      (int64_t @-> double @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_fft_rfftfreq_out =
    foreign
      "atg_fft_rfftfreq_out"
      (gc_tensor @-> int64_t @-> double @-> returning raw_tensor)
  ;;

  let stubs_fft_rfftn =
    foreign
      "atg_fft_rfftn"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fft_rfftn_out =
    foreign
      "atg_fft_rfftn_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_fill = foreign "atg_fill" (gc_tensor @-> scalar @-> returning raw_tensor)
  let stubs_fill_ = foreign "atg_fill_" (gc_tensor @-> scalar @-> returning raw_tensor)

  let stubs_fill_diagonal_ =
    foreign "atg_fill_diagonal_" (gc_tensor @-> scalar @-> int @-> returning raw_tensor)
  ;;

  let stubs_fill_scalar_out =
    foreign
      "atg_fill_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_fill_tensor =
    foreign "atg_fill_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_fill_tensor_ =
    foreign "atg_fill_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_fill_tensor_out =
    foreign
      "atg_fill_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;
